# Fund-My-Cause

./: Cargo.toml  Makefile
.github/workflows/: canary-deployment.yml  docs.yml
apps/components-lib/src/: Modal.tsx
apps/interface/: tsconfig.tsbuildinfo
apps/interface/src/app/: globals.css
apps/interface/src/app/[locale]/: layout.tsx
apps/interface/src/app/campaigns/: page.tsx
apps/interface/src/components/create/: CreateCampaignWizard.tsx
apps/interface/src/hooks/: index.ts
contracts/crowdfund/src/: errors.rs  lib.rs  test.rs  types.rs
docs/: contract-api.md  rustdoc.md
scripts/: canary-deploy.sh
