[workspace]
resolver = "2"
members = [
  "contracts/*",
]
exclude = ["contracts/benchmarks"]

[workspace.metadata.docs]
# Run `cargo doc --workspace --no-deps --document-private-items` to build docs locally.
# The GitHub Actions workflow `.github/workflows/docs.yml` builds and deploys to GitHub Pages.
output-dir = "target/doc"

[workspace.dependencies]
soroban-sdk = "25.3.0"
insta = { version = "1.37", features = ["redactions"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
